--- a/index.html
+++ b/index.html
@@ -19,16 +19,6 @@
           <a href="#">خانه</a>
         </li>
         <li>
-          <a href="#">بلاگ</a>
-        </li>
-        <li>
-          <a href="#">درباره ی من</a>
-        </li>
-        <li>
-          <a href="#">سورس کد</a>
-        </li>
-
-        <li>
           <a href="#">استخدام من</a>
         </li>
         <li>
@@ -123,19 +113,19 @@
         >
           <div>
             <div class="project">
-              <img src="./images/icons8-mission-100.png" alt="">
+              <img src="./images/icons8-mission-100.png" alt="" />
               <p>پروژه ی موفق : 30</p>
             </div>
           </div>
           <div>
             <div class="project">
-              <img src="./images/working.svg" alt="">
+              <img src="./images/working.svg" alt="" />
               <p>پروژه درحال انجام : 2</p>
             </div>
           </div>
           <div>
             <div class="project">
-              <img src="./images/error.svg" alt="">
+              <img src="./images/error.svg" alt="" />
               <p>پروژه ی شکست خورده : 2</p>
             </div>
           </div>
