--- a/Post.html
+++ b/Post.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./css/responsive.min.css" />
   </head>
   <body>
+    <p>test update</p>
     <header>
       <span class="icon-responsive" uk-toggle="target: #ul-nav;cls:active-nav"
         ><span></span
@@ -28,21 +29,49 @@
       <div uk-grid>
         <div class="uk-width-expand">
           <div class="text-post">
-            <h1>لورم ایپسوم </h1>
-            <img src="./images/lance-anderson-Cv-sME1Mxn8-unsplash.jpg" alt="image alt" />
+            <h1>لورم ایپسوم</h1>
+            <img
+              src="./images/lance-anderson-Cv-sME1Mxn8-unsplash.jpg"
+              alt="image alt"
+            />
             <p>
-              لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با استفاده از طراحان گرافیک است، چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است، و برای شرایط فعلی تکنولوژی مورد نیاز، و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد، کتابهای زیادی در شصت و سه درصد گذشته حال و آینده، شناخت فراوان جامعه و متخصصان را می طلبد، تا با نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان خلاقی، و فرهنگ پیشرو در زبان فارسی ایجاد کرد، در این صورت می توان امید داشت که تمام و دشواری موجود در ارائه راهکارها، و شرایط سخت تایپ به پایان رسد و زمان مورد نیاز شامل حروفچینی دستاوردهای اصلی، و جوابگوی سوالات پیوسته اهل دنیای موجود طراحی اساسا مورد استفاده قرار گیرد.لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با استفاده از طراحان گرافیک است، چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است، و برای شرایط فعلی تکنولوژی مورد نیاز، و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد، کتابهای زیادی در شصت و سه درصد گذشته حال و آینده، شناخت فراوان جامعه و متخصصان را می طلبد، تا با نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان خلاقی، و فرهنگ پیشرو در زبان فارسی ایجاد کرد، در این صورت می توان امید داشت که تمام و دشواری موجود در ارائه راهکارها، و شرایط سخت تایپ به پایان رسد و زمان مورد نیاز شامل حروفچینی دستاوردهای اصلی، و جوابگوی سوالات پیوسته اهل دنیای موجود طراحی اساسا مورد استفاده قرار گیرد.
+              لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با
+              استفاده از طراحان گرافیک است، چاپگرها و متون بلکه روزنامه و مجله
+              در ستون و سطرآنچنان که لازم است، و برای شرایط فعلی تکنولوژی مورد
+              نیاز، و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد،
+              کتابهای زیادی در شصت و سه درصد گذشته حال و آینده، شناخت فراوان
+              جامعه و متخصصان را می طلبد، تا با نرم افزارها شناخت بیشتری را برای
+              طراحان رایانه ای علی الخصوص طراحان خلاقی، و فرهنگ پیشرو در زبان
+              فارسی ایجاد کرد، در این صورت می توان امید داشت که تمام و دشواری
+              موجود در ارائه راهکارها، و شرایط سخت تایپ به پایان رسد و زمان مورد
+              نیاز شامل حروفچینی دستاوردهای اصلی، و جوابگوی سوالات پیوسته اهل
+              دنیای موجود طراحی اساسا مورد استفاده قرار گیرد.لورم ایپسوم متن
+              ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با استفاده از طراحان
+              گرافیک است، چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان
+              که لازم است، و برای شرایط فعلی تکنولوژی مورد نیاز، و کاربردهای
+              متنوع با هدف بهبود ابزارهای کاربردی می باشد، کتابهای زیادی در شصت
+              و سه درصد گذشته حال و آینده، شناخت فراوان جامعه و متخصصان را می
+              طلبد، تا با نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی
+              الخصوص طراحان خلاقی، و فرهنگ پیشرو در زبان فارسی ایجاد کرد، در این
+              صورت می توان امید داشت که تمام و دشواری موجود در ارائه راهکارها، و
+              شرایط سخت تایپ به پایان رسد و زمان مورد نیاز شامل حروفچینی
+              دستاوردهای اصلی، و جوابگوی سوالات پیوسته اهل دنیای موجود طراحی
+              اساسا مورد استفاده قرار گیرد.
             </p>
             <h1>second title</h1>
-            <img src="./images/lance-anderson-Cv-sME1Mxn8-unsplash.jpg" alt="ALT" />
+            <img
+              src="./images/lance-anderson-Cv-sME1Mxn8-unsplash.jpg"
+              alt="ALT"
+            />
           </div>
         </div>
-        <div  class="uk-width-1-3@m">
+        <div class="uk-width-1-3@m">
           <aside>
-            <div class="info-post"  uk-sticky="offset: 10;animation: uk-animation-fade">
-              <p>
-                اطلاعات پست
-              </p>
+            <div
+              class="info-post"
+              uk-sticky="offset: 10;animation: uk-animation-fade"
+            >
+              <p>اطلاعات پست</p>
               <div class="create-date">
                 <img src="./images/booking.svg" alt="" />
                 <p>تاریخ ثبت : 1398/10/14</p>
@@ -52,12 +81,12 @@
                 <p>دسته بندی : نمونه ی کار</p>
               </div>
               <div class="view">
-                <img src="./images/views.svg" alt="">
+                <img src="./images/views.svg" alt="" />
                 <p>بازدید : 12</p>
               </div>
               <div class="tags">
                 <img src="./images/tags.svg" alt="" />
-                <p>کلمات کلیدی : </p>
+                <p>کلمات کلیدی :</p>
                 <ul>
                   <li>کلمه ی کلیدی</li>
                   <li>کلمه ی کلیدی</li>
