--- a/Project.html
+++ b/Project.html
@@ -10,17 +10,15 @@
   <body>
     <header>
       <span class="icon-responsive" uk-toggle="target: #ul-nav;cls:active-nav"
-        ><span></span>
-      </span>
+        ><span></span
+      ></span>
       <ul id="ul-nav">
         <li>
-          <a href="#">خانه</a>
+          <a href="/">خانه</a>
         </li>
+        
         <li>
-          <a href="#">استخدام من</a>
-        </li>
-        <li>
-          <a href="#">پروژه دارم</a>
+          <a href="/Project.html">پروژه دارم</a>
         </li>
       </ul>
     </header>
@@ -82,6 +80,9 @@
             <label for="Wahtsap">واتساپ</label>
           </div>
           <button type="submit" class="button-more">ارسال</button>
+          <div class="alert-project">
+              این سیستم هنوز راه اندازی نشده است .
+          </div>
         </form>
       </div>
     </div>
@@ -118,7 +119,7 @@
           uk-tooltip="MohamadDev@gmail.com"
           alt="my email addres"
         />
-        <p>هرگونه کپی برداری از این وب سایت شرعاً حرام می باشد</p>
+        <!-- <p>هرگونه کپی برداری از این وب سایت شرعاً حرام می باشد</p> -->
       </div>
     </footer>
     <script src="./js/uikit.min.js"></script>
