--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>محمد مهدی -</title>
+    <title>محمد مهدی</title>
     <link rel="stylesheet" href="./css/uikit-rtl.min.css" />
     <link rel="stylesheet" href="./css/style.min.css" />
     <link rel="stylesheet" href="./css/responsive.min.css" />
@@ -16,23 +16,18 @@
       </span>
       <ul id="ul-nav">
         <li>
-          <a href="#">خانه</a>
+          <a href="/">خانه</a>
         </li>
         <li>
-          <a href="#">استخدام من</a>
-        </li>
-        <li>
-          <a href="#">پروژه دارم</a>
+          <a href="/Project.html">پروژه دارم</a>
         </li>
       </ul>
       <div class="header-container">
         <div>
           <h4>درباره ی من</h4>
           <p>
-            لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با
-            استفاده از طراحان گرافیک است چاپگرها و متون بلکه روزنامه و مجله در
-            ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و
-            کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد
+            من محمد مهدی دبستانی هستم . طراح و توسعه دهنده ی وب از سال 1397 شروع
+            کرده ام . در شاخه ی وب با تکنولوژی هایی کار کرده ام که قسمت پایین میتونید ببینید . همچنین شما میتوانید که رزومه ی من رو از طریق <a href="/CV.pdf" download>لینک</a> دریافت کنید
           </p>
         </div>
         <div>
@@ -60,7 +55,7 @@
         </div>
         <div>
           <div class="card-xp">
-            <p class="uk-align-left">javascript : 80%</p>
+            <p class="uk-align-left">javascript : 90%</p>
             <progress class="uk-progress" value="80" max="100"></progress>
           </div>
         </div>
@@ -94,12 +89,12 @@
             <progress class="uk-progress" value="70" max="100"></progress>
           </div>
         </div>
-        <div>
+        <!-- <div>
           <div class="card-xp is-learning">
             <p class="uk-align-left">Python</p>
             <div uk-spinner></div>
           </div>
-        </div>
+        </div> -->
       </div>
     </div>
     <!-- certificates -->
@@ -114,19 +109,19 @@
           <div>
             <div class="project">
               <img src="./images/icons8-mission-100.png" alt="" />
-              <p>پروژه ی موفق : 30</p>
+              <p>پروژه ی موفق : 1</p>
             </div>
           </div>
           <div>
             <div class="project">
               <img src="./images/working.svg" alt="" />
-              <p>پروژه درحال انجام : 2</p>
+              <p>پروژه درحال انجام : 0</p>
             </div>
           </div>
           <div>
             <div class="project">
               <img src="./images/error.svg" alt="" />
-              <p>پروژه ی شکست خورده : 2</p>
+              <p>پروژه ی شکست خورده : 0</p>
             </div>
           </div>
         </div>
@@ -149,17 +144,15 @@
               </a>
             </div>
             <div class="example-work-text uk-padding-small">
-              <h4 class="uk-text-right uk-margin-small">عنوان پست</h4>
+              <h4 class="uk-text-right uk-margin-small">وب سایت Decortina</h4>
               <p class="uk-margin-remove">
-                لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با
-                استفاده از طراحان گرافیک است چاپگرها و متون بلکه روزنامه و مجله
-                در ستون و سطرآنچنان که لازم است و برای
+                در این پست قرار است که ما بررسی کنیم که وب سایت Decortina حدف آن چیست و با با چه تکنولوژی هایی درست شده است
               </p>
               <div class="svg-wrapper">
                 <svg height="40" width="150" xmlns="http://www.w3.org/2000/svg">
                   <rect id="shape" height="40" width="150" />
                   <div id="text">
-                    <a href="#">
+                    <a href="/Post.html">
                       <span class="spot"></span>
                       ادامه ی مطلب
                     </a>
@@ -169,7 +162,7 @@
             </div>
           </div>
         </div>
-        <div>
+        <!-- <div>
           <div class="uk-text-center example-work">
             <div class="image-example">
               <a href="#">
@@ -230,21 +223,21 @@
               </div>
             </div>
           </div>
-        </div>
+        </div> -->
       </div>
       <div class="uk-flex uk-flex-center uk-margin-medium-top">
         <ul class="uk-pagination" uk-margin>
           <li><a href="#">1</a></li>
-          <li><a href="#">2</a></li>
+          <!-- <li><a href="#">2</a></li>
           <li><a href="#">3</a></li>
-          <li><a href="#">4</a></li>
+          <li><a href="#">4</a></li> -->
         </ul>
       </div>
     </div>
     <hr class="uk-divider-icon uk-margin-medium-top" />
     <div class="jupiter-comment uk-container uk-margin-small-top">
       <h3>نظرات مشتری :</h3>
-      <div
+      <!-- <div
         class="uk-position-relative uk-visible-toggle uk-light carousel"
         tabindex="-1"
         uk-slideshow="animation: push;autoplay:true;autoplay-interval:4000"
@@ -309,8 +302,8 @@
           <li uk-slideshow-item="1"><a href="#"></a></li>
           <li uk-slideshow-item="2"><a href="#"></a></li>
         </ul>
-      </div>
-      <!-- <div class="alert-comment"><p>نظری وجود ندارد</p></div> -->
+      </div> -->
+      <div class="alert-comment"><p>نظری وجود ندارد</p></div> 
     </div>
     <footer>
       <div class="custom-shape-divider-top-1609738135">
@@ -330,7 +323,7 @@
         <h4>با من در ارتباط باشید</h4>
         <img
           src="./images/icons8-github-48.png"
-          uk-tooltip="IdGithub"
+          uk-tooltip="MohamadMehdiDabestani"
           alt="my github"
         />
         <img
@@ -342,10 +335,10 @@
         <img
           src="./images/icons8-email-48.png"
           class="telephone"
-          uk-tooltip="MohamadDev@gmail.com"
+          uk-tooltip="MohamadMehdiDeveloper"
           alt="my email addres"
         />
-        <p>هرگونه کپی برداری از این وب سایت شرعاً حرام می باشد</p>
+        <!-- <p>هرگونه کپی برداری از این وب سایت شرعاً حرام می باشد</p> -->
       </div>
     </footer>
     <script src="./js/uikit.min.js"></script>
