--- a/Post.html
+++ b/Post.html
@@ -2,26 +2,23 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>محمد مهدی - عنوان پست</title>
+    <title>محمد مهدی - وب سایت Decortina</title>
     <link rel="stylesheet" href="./css/uikit-rtl.min.css" />
     <link rel="stylesheet" href="./css/style.min.css" />
     <link rel="stylesheet" href="./css/responsive.min.css" />
   </head>
   <body>
-    <p>test update</p>
     <header>
       <span class="icon-responsive" uk-toggle="target: #ul-nav;cls:active-nav"
         ><span></span
       ></span>
       <ul id="ul-nav">
         <li>
-          <a href="#">خانه</a>
+          <a href="/">خانه</a>
         </li>
+
         <li>
-          <a href="#">استخدام من</a>
-        </li>
-        <li>
-          <a href="#">پروژه دارم</a>
+          <a href="/Project.html">پروژه دارم</a>
         </li>
       </ul>
     </header>
@@ -29,40 +26,48 @@
       <div uk-grid>
         <div class="uk-width-expand">
           <div class="text-post">
-            <h1>لورم ایپسوم</h1>
-            <img
-              src="./images/lance-anderson-Cv-sME1Mxn8-unsplash.jpg"
-              alt="image alt"
-            />
+            <h1>توضیح وب سایت Decortian</h1>
+            <img src="./images/Work time-amico.svg" alt="Decortina_Post" />
             <p>
-              لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با
-              استفاده از طراحان گرافیک است، چاپگرها و متون بلکه روزنامه و مجله
-              در ستون و سطرآنچنان که لازم است، و برای شرایط فعلی تکنولوژی مورد
-              نیاز، و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد،
-              کتابهای زیادی در شصت و سه درصد گذشته حال و آینده، شناخت فراوان
-              جامعه و متخصصان را می طلبد، تا با نرم افزارها شناخت بیشتری را برای
-              طراحان رایانه ای علی الخصوص طراحان خلاقی، و فرهنگ پیشرو در زبان
-              فارسی ایجاد کرد، در این صورت می توان امید داشت که تمام و دشواری
-              موجود در ارائه راهکارها، و شرایط سخت تایپ به پایان رسد و زمان مورد
-              نیاز شامل حروفچینی دستاوردهای اصلی، و جوابگوی سوالات پیوسته اهل
-              دنیای موجود طراحی اساسا مورد استفاده قرار گیرد.لورم ایپسوم متن
-              ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با استفاده از طراحان
-              گرافیک است، چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان
-              که لازم است، و برای شرایط فعلی تکنولوژی مورد نیاز، و کاربردهای
-              متنوع با هدف بهبود ابزارهای کاربردی می باشد، کتابهای زیادی در شصت
-              و سه درصد گذشته حال و آینده، شناخت فراوان جامعه و متخصصان را می
-              طلبد، تا با نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی
-              الخصوص طراحان خلاقی، و فرهنگ پیشرو در زبان فارسی ایجاد کرد، در این
-              صورت می توان امید داشت که تمام و دشواری موجود در ارائه راهکارها، و
-              شرایط سخت تایپ به پایان رسد و زمان مورد نیاز شامل حروفچینی
-              دستاوردهای اصلی، و جوابگوی سوالات پیوسته اهل دنیای موجود طراحی
-              اساسا مورد استفاده قرار گیرد.
+              در این پست قرار است که بیایم و سایت Decortina رو با هم دیگه بررسی
+              کنیم مثلا با چه تکنولوژی هایی کد زنی شده و حدف از ساخت اون چیه قبل
+              از هرچیزی باید بگویم که این پروژه چند ماهی هست که متوقف شده و به
+              زودی دوباره شروع میکنم به توسعه ی آن . وب سایت Decortian یک
+              فروشگاه چند منظوره هست که شما میتوانید کالا های خود را مثل : قالب
+              ووردپرس , افزونه های ووردپرس , فروش آموزش های خودتون مثل برنامه
+              نویسی یا فتوشاپ یا ... را به فروش برسانید.
             </p>
-            <h1>second title</h1>
-            <img
-              src="./images/lance-anderson-Cv-sME1Mxn8-unsplash.jpg"
-              alt="ALT"
-            />
+            <h3>تکنولوژی های استفاده شده</h3>
+            <img src="./images/Server-pana.svg" alt="Decortina_Tecnology" />
+            <p>
+              در این پروژه بک اند (API) با استفاده از asp.net 5 کد نویسی شده و
+              با استفاده از الگوی MVC در این پروژه ما سه لایه دارم با نام های
+              App , Data , Core در لایه ی Data دیتا بیس و جدول های پروژه رو با
+              استفاده از روش Code First تعریف شده است و این لایه تنها و تنها
+              وظیفه ی آن مدیریت Database بوده همچنین بانک اطلاعاتی آن هم SQL
+              server هست . لایه ی Core هم تنها و تنها وظیفه ی کوئری روی بانک و
+              پردازش اطلاعات را دارد و چند نکته ی امنیت که در این لایه پوشش داده
+              شده . در لایه ی App هم Controller ها تعریف شده که اطلاعات از لایه
+              Core دریافت می کند و به اپلیکیشن میفرستد . سعی شده که اصلا بقیه ی
+              لایه ها را درگیر منطق و شرط ها نکنیم تا بهترین نتیجه را بگیریم و
+              بیشتر شرط ها در لایه ی App تعریف شده . برای احراز هویت هم از سیستم
+              قدرتمند Identity استفاده کردیم تا بهترین نتیجه و با امنیت بالا را
+              دریافت کنیم .
+            </p>
+            <img src="./images/Projections-pana.svg" alt="Decortina_Front" />
+            <p>
+              همانطور که گفته شد بک اند سایت Decortina یک API هست پس عادیه که از
+              تکنولوژی هایی استفاده کنیم در فرانت که به صورت SPA هستند مثل
+              انگیولار یا ویو یا ری اکت که در این پروژه قرار است که فرانت کار با
+              استفاده از ری اکت پیاده سازی بشه و طبق صحبت هایی که شده قرار است
+              که فرانت کار رو هم من خودم اجرایی کنم البته هنوز بخش فرانت شروع
+              نشده حدف ما از استفاده از ری اکت این بوده این تکنولوژی سرعت فوق
+              العاده بالایی دارد به دلیل اینکه سایت شما به Single Page
+              Application اجرا میشه این به معنای این هست که کاربر وقتی که در
+              سایت شما در بین صفحات گشت زنی میکند مرورگر اصلا رفرش (بارگیری)
+              نمیشود و این واقعا عالیه . این به دلیل این است که از تکنولوژی ای
+              به نام ajax استفاده میکند
+            </p>
           </div>
         </div>
         <div class="uk-width-1-3@m">
@@ -80,19 +85,17 @@
                 <img src="./images/category.svg" alt="" />
                 <p>دسته بندی : نمونه ی کار</p>
               </div>
-              <div class="view">
+              <!-- <div class="view">
                 <img src="./images/views.svg" alt="" />
                 <p>بازدید : 12</p>
-              </div>
+              </div> -->
               <div class="tags">
                 <img src="./images/tags.svg" alt="" />
                 <p>کلمات کلیدی :</p>
                 <ul>
-                  <li>کلمه ی کلیدی</li>
-                  <li>کلمه ی کلیدی</li>
-                  <li>کلمه ی کلیدی</li>
-                  <li>کلمه ی کلیدی</li>
-                  <li>کلمه ی کلیدی</li>
+                  <li>نمونه ی کار</li>
+                  <li>وب سایت decortina</li>
+                  <li>تکنولوژی های decortina</li>
                 </ul>
               </div>
             </div>
@@ -133,7 +136,7 @@
           uk-tooltip="MohamadDev@gmail.com"
           alt="my email addres"
         />
-        <p>هرگونه کپی برداری از این وب سایت شرعاً حرام می باشد</p>
+        <!-- <p>هرگونه کپی برداری از این وب سایت شرعاً حرام می باشد</p> -->
       </div>
     </footer>
     <script src="./js/uikit.min.js"></script>
