--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
             <div class="image-example">
               <a href="#">
                 <img
-                  src="./images/lance-anderson-Cv-sME1Mxn8-unsplash.jpg"
+                  src="./images/Work time-amico.svg"
                   alt="image"
                 />
               </a>
