--- a/Post.html
+++ b/Post.html
@@ -102,7 +102,7 @@
           </aside>
         </div>
       </div>
-    </div>
+    </div>\
     <footer>
       <div class="custom-shape-divider-top-1609738135">
         <svg
